TRUNK
  - [patch] subversion external support
------------------------------------------------------------------------------------------------------------------------
* 1.2.1
  - [bugfix] fixed some windows specific things to do with running a server
  
------------------------------------------------------------------------------------------------------------------------
* 1.2.0
  - build chaining implemented w/ triggers
  - recognized NetBSD as a platform
  - some optimizations for dashboard / CCTray performance
  - data version of ./projects directory is stored, and necessary migrations are run automatically if cruise version
    number is bigger than data version
  - setting CC_BUILD_LABEL environment variable before invoking the build
  - [bugfix] no longer passing in 'production' as RAILS_ENV to rake cruise
  - [bugfix] handle Subversion URLs with spaces; generally improved escaping of special characters
             on the command line
  - [bugfix] Email notifier works with non-TLS enabled SMTP servers

------------------------------------------------------------------------------------------------------------------------
* 1.1.0
  - individual RSS feeds for each project
  - documented options configurable through config/site_config.rb
  - added a "from" option to EmailNotifier configuration
  - added Growl notifier to available plugins
  - email notices can contain either full build log, or a link to the dashboard
  - builder does not clear RAILS_ENV environment variable before calling custom tasks
  - builder always sets RAILS_ENV environment to 'test' before calling default tasks
  - "cannot connect to Subversion" situations, plugin errors and other problems that occur outside of a build loop are
    now displayed on the dashboard
  - custom project settings are displayed on the build log page
  - [bugfix] Fixed cruise start --daemon option
  - [bugfix] Removed incomplete builds from RSS feeds