@@ -10,11 +10,13 @@ class Configuration
   @email_from = 'cruisecontrol@thoughtworks.com'
   @disable_build_now = false
   @serialize_builds = false
+  @serialized_build_timeout = 1.hour
 
   class << self
     # published configuration options (mentioned in config/site_config.rb.example)
     attr_accessor :default_polling_interval, :disable_build_now, :email_from,
-                  :dashboard_refresh_interval, :projects_directory, :serialize_builds
+                  :dashboard_refresh_interval, :projects_directory, :serialize_builds,
+                  :serialized_build_timeout
     attr_reader :dashboard_url
 
     # non-published configuration options (obscure stuff, mostly useful for http://cruisecontrolrb.thoughtworks.com)
